--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -14,6 +14,15 @@
     color: #00df9a;
     font-weight: 600;
 }
+.footer__cta-link:hover {
+    color: #00ffbf;
+}
+.footer__cta-link {
+    color: #00df9a;
+    text-decoration: none;
+    font-weight: 600;
+    transition: color 0.3s;
+}
 
 .footer__social a {
     display: inline-flex;
