--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,19 @@ a {
 ul {
   list-style: none;
 }
+:root {
+  --bg-color: #ffffff;
+  --text-color: #000000;
+  --accent-color: #00df9a;
+}
+
+[data-theme="dark"] {
+  --bg-color: #161616;
+  --text-color: #eaeaea;
+}
+
+body {
+  background-color: var(--bg-color);
+  color: var(--text-color);
+  transition: background-color 0.3s, color 0.3s;
+}
